include/El/core/Matrix.h

/* NOTE: "ElInt* I" and "ElInt* J" have been converted to 
         "ElInt* rowInd" and "ElInt* colInd" due to what appears to be a bug
         in /usr/bin/c++ in Ubuntu */

/* An anonymous struct meant as a placeholder for Matrix<T>
   -------------------------------------------------------- */
typedef struct ElMatrix_iDummy* ElMatrix_i;
typedef struct ElMatrix_sDummy* ElMatrix_s;
typedef struct ElMatrix_dDummy* ElMatrix_d;
typedef struct ElMatrix_cDummy* ElMatrix_c;
typedef struct ElMatrix_zDummy* ElMatrix_z;
typedef const struct ElMatrix_iDummy* ElConstMatrix_i;
typedef const struct ElMatrix_sDummy* ElConstMatrix_s;
typedef const struct ElMatrix_dDummy* ElConstMatrix_d;
typedef const struct ElMatrix_cDummy* ElConstMatrix_c;
typedef const struct ElMatrix_zDummy* ElConstMatrix_z;
/* T* Matrix<T>::Buffer()
   ---------------------- */
EL_EXPORT ElError ElMatrixBuffer_i( ElMatrix_i A, ElInt** buffer );
EL_EXPORT ElError ElMatrixBuffer_s( ElMatrix_s A, float** buffer );
EL_EXPORT ElError ElMatrixBuffer_d( ElMatrix_d A, double** buffer );
EL_EXPORT ElError ElMatrixBuffer_c( ElMatrix_c A, complex_float** buffer );
EL_EXPORT ElError ElMatrixBuffer_z( ElMatrix_z A, complex_double** buffer );
/* const T* Matrix<T>::LockedBuffer() const
   ---------------------------------------- */
EL_EXPORT ElError ElMatrixLockedBuffer_i
( ElConstMatrix_i A, const ElInt** buffer );
EL_EXPORT ElError ElMatrixLockedBuffer_s
( ElConstMatrix_s A, const float** buffer );
EL_EXPORT ElError ElMatrixLockedBuffer_d
( ElConstMatrix_d A, const double** buffer );
EL_EXPORT ElError ElMatrixLockedBuffer_c
( ElConstMatrix_c A, const complex_float** buffer );
EL_EXPORT ElError ElMatrixLockedBuffer_z
( ElConstMatrix_z A, const complex_double** buffer );
/* T Matrix<T>::Get( Int i, Int j ) const
   -------------------------------------- */
EL_EXPORT ElError ElMatrixGet_i
( ElConstMatrix_i A, ElInt i, ElInt j, ElInt* val );
EL_EXPORT ElError ElMatrixGet_s
( ElConstMatrix_s A, ElInt i, ElInt j, float* val );
EL_EXPORT ElError ElMatrixGet_d
( ElConstMatrix_d A, ElInt i, ElInt j, double* val );
EL_EXPORT ElError ElMatrixGet_c
( ElConstMatrix_c A, ElInt i, ElInt j, complex_float* val );
EL_EXPORT ElError ElMatrixGet_z
( ElConstMatrix_z A, ElInt i, ElInt j, complex_double* val );
/* Base<T> Matrix<T>::GetRealPart( Int i, Int j ) const
   ---------------------------------------------------- */
EL_EXPORT ElError ElMatrixGetRealPart_c
( ElConstMatrix_c A, ElInt i, ElInt j, float* val );
EL_EXPORT ElError ElMatrixGetRealPart_z
( ElConstMatrix_z A, ElInt i, ElInt j, double* val );
/* Base<T> Matrix<T>::GetImagPart( Int i, Int j ) const
   ---------------------------------------------------- */
EL_EXPORT ElError ElMatrixGetImagPart_c
( ElConstMatrix_c A, ElInt i, ElInt j, float* val );
EL_EXPORT ElError ElMatrixGetImagPart_z
( ElConstMatrix_z A, ElInt i, ElInt j, double* val );
/* void Matrix<T>::Set( Int i, Int j, T alpha )
   -------------------------------------------- */
EL_EXPORT ElError ElMatrixSet_s
( ElMatrix_s A, ElInt i, ElInt j, float alpha );
EL_EXPORT ElError ElMatrixSet_s
( ElMatrix_s A, ElInt i, ElInt j, float alpha );
EL_EXPORT ElError ElMatrixSet_d
( ElMatrix_d A, ElInt i, ElInt j, double alpha );
EL_EXPORT ElError ElMatrixSet_c
( ElMatrix_c A, ElInt i, ElInt j, complex_float alpha );
EL_EXPORT ElError ElMatrixSet_z
( ElMatrix_z A, ElInt i, ElInt j, complex_double alpha );
/* void Matrix<T>::SetRealPart( Int i, Int j, Base<T> alpha )
   ---------------------------------------------------------- */
EL_EXPORT ElError ElMatrixSetRealPart_c
( ElMatrix_c A, ElInt i, ElInt j, float alpha );
EL_EXPORT ElError ElMatrixSetRealPart_z
( ElMatrix_z A, ElInt i, ElInt j, double alpha );
/* void Matrix<T>::SetImagPart( Int i, Int j, Base<T> alpha )
   ---------------------------------------------------------- */
EL_EXPORT ElError ElMatrixSetImagPart_c
( ElMatrix_c A, ElInt i, ElInt j, float alpha );
EL_EXPORT ElError ElMatrixSetImagPart_z
( ElMatrix_z A, ElInt i, ElInt j, double alpha );
/* void Matrix<T>::Update( Int i, Int j, T alpha )
   ----------------------------------------------- */
EL_EXPORT ElError ElMatrixUpdate_i
( ElMatrix_i A, ElInt i, ElInt j, ElInt alpha );
EL_EXPORT ElError ElMatrixUpdate_s
( ElMatrix_s A, ElInt i, ElInt j, float alpha );
EL_EXPORT ElError ElMatrixUpdate_d
( ElMatrix_d A, ElInt i, ElInt j, double alpha );
EL_EXPORT ElError ElMatrixUpdate_c
( ElMatrix_c A, ElInt i, ElInt j, complex_float alpha );
EL_EXPORT ElError ElMatrixUpdate_z
( ElMatrix_z A, ElInt i, ElInt j, complex_double alpha );
/* void Matrix<T>::UpdateRealPart( Int i, Int j, Base<T> alpha )
   ------------------------------------------------------------- */
EL_EXPORT ElError ElMatrixUpdateRealPart_c
( ElMatrix_c A, ElInt i, ElInt j, float alpha );
EL_EXPORT ElError ElMatrixUpdateRealPart_z
( ElMatrix_z A, ElInt i, ElInt j, double alpha );
/* void Matrix<T>::UpdateImagPart( Int i, Int j, Base<T> alpha )
   ------------------------------------------------------------- */
EL_EXPORT ElError ElMatrixUpdateImagPart_c
( ElMatrix_c A, ElInt i, ElInt j, float alpha );
EL_EXPORT ElError ElMatrixUpdateImagPart_z
( ElMatrix_z A, ElInt i, ElInt j, double alpha );
/* void Matrix<T>::MakeReal( Int i, Int j )
   ---------------------------------------- */
EL_EXPORT ElError ElMatrixMakeReal_c( ElMatrix_c A, ElInt i, ElInt j );
EL_EXPORT ElError ElMatrixMakeReal_z( ElMatrix_z A, ElInt i, ElInt j );
/* void Matrix<T>::Conjugate( Int i, Int j )
   ----------------------------------------- */
EL_EXPORT ElError ElMatrixConjugate_c( ElMatrix_c A, ElInt i, ElInt j );
EL_EXPORT ElError ElMatrixConjugate_z( ElMatrix_z A, ElInt i, ElInt j );