python/core/Matrix.py


  lib.ElMatrixBuffer_i.argtypes = [c_void_p,POINTER(POINTER(iType))]
  lib.ElMatrixBuffer_s.argtypes = [c_void_p,POINTER(POINTER(sType))]
  lib.ElMatrixBuffer_d.argtypes = [c_void_p,POINTER(POINTER(dType))]
  lib.ElMatrixBuffer_c.argtypes = [c_void_p,POINTER(POINTER(cType))]
  lib.ElMatrixBuffer_z.argtypes = [c_void_p,POINTER(POINTER(zType))]
  lib.ElMatrixLockedBuffer_i.argtypes = [c_void_p,POINTER(POINTER(iType))]
  lib.ElMatrixLockedBuffer_s.argtypes = [c_void_p,POINTER(POINTER(sType))]
  lib.ElMatrixLockedBuffer_d.argtypes = [c_void_p,POINTER(POINTER(dType))]
  lib.ElMatrixLockedBuffer_c.argtypes = [c_void_p,POINTER(POINTER(cType))]
  lib.ElMatrixLockedBuffer_z.argtypes = [c_void_p,POINTER(POINTER(zType))]
  def Buffer(self,locked=False):
    buf = POINTER(TagToType(self.tag))()
    args = [self.obj,pointer(buf)]
    if locked:
      if   self.tag == iTag: lib.ElMatrixLockedBuffer_i(*args) 
      elif self.tag == sTag: lib.ElMatrixLockedBuffer_s(*args)
      elif self.tag == dTag: lib.ElMatrixLockedBuffer_d(*args)
      elif self.tag == cTag: lib.ElMatrixLockedBuffer_c(*args)
      elif self.tag == zTag: lib.ElMatrixLockedBuffer_z(*args)
    else:
      if   self.tag == iTag: lib.ElMatrixBuffer_i(*args) 
      elif self.tag == sTag: lib.ElMatrixBuffer_s(*args)
      elif self.tag == dTag: lib.ElMatrixBuffer_d(*args)
      elif self.tag == cTag: lib.ElMatrixBuffer_c(*args)
      elif self.tag == zTag: lib.ElMatrixBuffer_z(*args)
    return buf

  lib.ElMatrixGet_i.argtypes = [c_void_p,iType,iType,POINTER(iType)]
  lib.ElMatrixGet_s.argtypes = [c_void_p,iType,iType,POINTER(sType)]
  lib.ElMatrixGet_d.argtypes = [c_void_p,iType,iType,POINTER(dType)]
  lib.ElMatrixGet_c.argtypes = [c_void_p,iType,iType,POINTER(cType)]
  lib.ElMatrixGet_z.argtypes = [c_void_p,iType,iType,POINTER(zType)]
  def Get(self,i,j):
    value = TagToType(self.tag)()
    args = [self.obj,i,j,pointer(value)]
    if   self.tag == iTag: lib.ElMatrixGet_i(*args)
    elif self.tag == sTag: lib.ElMatrixGet_s(*args)
    elif self.tag == dTag: lib.ElMatrixGet_d(*args)
    elif self.tag == cTag: lib.ElMatrixGet_c(*args)
    elif self.tag == zTag: lib.ElMatrixGet_z(*args)
    return ScalarData(value)

  lib.ElMatrixGetRealPart_c.argtypes = [c_void_p,iType,iType,POINTER(sType)]
  lib.ElMatrixGetRealPart_z.argtypes = [c_void_p,iType,iType,POINTER(dType)]
  def GetRealPart(self,i,j):
    if self.tag == cTag:
      value = sType()
      lib.ElMatrixGetRealPart_c(self.obj,i,j,pointer(value))
      return value.value
    elif self.tag == zTag:
      value = dType()
      lib.ElMatrixGetRealPart_z(self.obj,i,j,pointer(value))
      return value.value
    else: return Get(i,j)

  lib.ElMatrixGetImagPart_c.argtypes = [c_void_p,iType,iType,POINTER(sType)]
  lib.ElMatrixGetImagPart_z.argtypes = [c_void_p,iType,iType,POINTER(dType)]
  def GetImagPart(self,i,j):
    if   self.tag == iTag: return iType(0).value
    elif self.tag == sTag: return sType(0).value
    elif self.tag == dTag: return dType(0).value
    elif self.tag == cTag:
      value = c_float()
      lib.ElMatrixGetImagPart_c(self.obj,i,j,pointer(value))
      return value.value
    elif self.tag == zTag:
      value = c_double()
      lib.ElMatrixGetImagPart_z(self.obj,i,j,pointer(value))
      return value.value

  lib.ElMatrixSet_i.argtypes = [c_void_p,iType,iType,iType]
  lib.ElMatrixSet_s.argtypes = [c_void_p,iType,iType,sType]
  lib.ElMatrixSet_d.argtypes = [c_void_p,iType,iType,dType]
  lib.ElMatrixSet_c.argtypes = [c_void_p,iType,iType,cType]
  lib.ElMatrixSet_z.argtypes = [c_void_p,iType,iType,zType]
  def Set(self,i,j,valuePre):
    value = TagToType(self.tag)(valuePre)
    args = [self.obj,i,j,value]
    if   self.tag == iTag: lib.ElMatrixSet_i(*args)
    elif self.tag == sTag: lib.ElMatrixSet_s(*args)
    elif self.tag == dTag: lib.ElMatrixSet_d(*args)
    elif self.tag == cTag: lib.ElMatrixSet_c(*args)
    elif self.tag == zTag: lib.ElMatrixSet_z(*args)

  lib.ElMatrixSetRealPart_c.argtypes = [c_void_p,iType,iType,sType]
  lib.ElMatrixSetRealPart_z.argtypes = [c_void_p,iType,iType,dType]
  def SetRealPart(self,i,j,value):
    if self.tag == cTag: 
      lib.ElMatrixSetRealPart_c(self.obj,i,j,sType(value))
    elif self.tag == zTag: 
      lib.ElMatrixSetRealPart_z(self.obj,i,j,dType(value))
    else: self.Set(i,j,value)

  lib.ElMatrixSetImagPart_c.argtypes = [c_void_p,iType,iType,sType]
  lib.ElMatrixSetImagPart_z.argtypes = [c_void_p,iType,iType,dType]
  def SetImagPart(self,i,j,value):
    if self.tag == cTag: 
      lib.ElMatrixSetImagPart_c(self.obj,i,j,sType(value))
    elif self.tag == zTag: 
      lib.ElMatrixSetImagPart_z(self.obj,i,j,dType(value))
    else: raise Exception("Datatype does not have an imaginary component")

  lib.ElMatrixUpdate_i.argtypes = [c_void_p,iType,iType,iType]
  lib.ElMatrixUpdate_s.argtypes = [c_void_p,iType,iType,sType]
  lib.ElMatrixUpdate_d.argtypes = [c_void_p,iType,iType,dType]
  lib.ElMatrixUpdate_c.argtypes = [c_void_p,iType,iType,cType]
  lib.ElMatrixUpdate_z.argtypes = [c_void_p,iType,iType,zType]
  def Update(self,i,j,valuePre):
    value = TagToType(self.tag)(valuePre)
    args = [self.obj,i,j,value]
    if   self.tag == iTag: lib.ElMatrixUpdate_i(*args)
    elif self.tag == sTag: lib.ElMatrixUpdate_s(*args)
    elif self.tag == dTag: lib.ElMatrixUpdate_d(*args)
    elif self.tag == cTag: lib.ElMatrixUpdate_c(*args)
    elif self.tag == zTag: lib.ElMatrixUpdate_z(*args)

  lib.ElMatrixUpdateRealPart_c.argtypes = [c_void_p,iType,iType,sType]
  lib.ElMatrixUpdateRealPart_z.argtypes = [c_void_p,iType,iType,dType]
  def UpdateRealPart(self,i,j,value):
    if self.tag == cTag: 
      lib.ElMatrixUpdateRealPart_c(self.obj,i,j,sType(value))
    elif self.tag == zTag: 
      lib.ElMatrixUpdateRealPart_z(self.obj,i,j,dType(value))
    else: self.Update(i,j,value)

  lib.ElMatrixUpdateImagPart_c.argtypes = [c_void_p,iType,iType,sType]
  lib.ElMatrixUpdateImagPart_z.argtypes = [c_void_p,iType,iType,dType]
  def UpdateImagPart(self,i,j,value):
    if self.tag == cTag: 
      lib.ElMatrixUpdateImagPart_c(self.obj,i,j,sType(value))
    elif self.tag == zTag: 
      lib.ElMatrixUpdateImagPart_z(self.obj,i,j,dType(value))
    else: raise Exception("Datatype does not have an imaginary component")

  lib.ElMatrixMakeReal_c.argtypes = \
  lib.ElMatrixMakeReal_z.argtypes = \
    [c_void_p,iType,iType]
  def MakeReal(self,i,j):
    if   self.tag == cTag: lib.ElMatrixMakeReal_c(self.obj,i,j)
    elif self.tag == zTag: lib.ElMatrixMakeReal_z(self.obj,i,j) 

  lib.ElMatrixConjugate_c.argtypes = \
  lib.ElMatrixConjugate_z.argtypes = \
    [c_void_p,iType,iType]
  def Conjugate(self,i,j):
    if   self.tag == cTag: lib.ElMatrixConjugate_c(self.obj,i,j)
    elif self.tag == zTag: lib.ElMatrixConjugate_z(self.obj,i,j)

  def ToNumPy(self):
    m = self.Height()
    n = self.Width()
    ldim = self.LDim()
    locked = self.Locked()
    entrySize = TagToSize(self.tag)
    npType = TagToNumpyType(self.tag)
    bufSize = entrySize*ldim*n
    if locked: buf = buffer_from_memory(self.LockedBuffer(),bufSize)
    else:      buf = buffer_from_memory_RW(self.Buffer(),bufSize)
    return np.ndarray(shape=(m,n),strides=(entrySize,ldim*entrySize),
                        buffer=buf,dtype=npType)

  lib.ElView_i.argtypes = \
  lib.ElView_s.argtypes = \
  lib.ElView_d.argtypes = \
  lib.ElView_c.argtypes = \
  lib.ElView_z.argtypes = \
  lib.ElLockedView_i.argtypes = \
  lib.ElLockedView_s.argtypes = \
  lib.ElLockedView_d.argtypes = \
  lib.ElLockedView_c.argtypes = \
  lib.ElLockedView_z.argtypes = \
    [c_void_p,c_void_p,IndexRange,IndexRange]
  def __getitem__(self,indTup):
    iInd, jInd = indTup
    if isinstance(iInd,slice):
      if iInd.start == None:
        iInd = slice(0,iInd.stop,iInd.step)
      if iInd.stop == None:
        iInd = slice(iInd.start,self.Height(),iInd.step)
    if isinstance(jInd,slice):
      if jInd.start == None:
        jInd = slice(0,jInd.stop,jInd.step)
      if jInd.stop == None:
        jInd = slice(jInd.start,self.Width(),jInd.step)
    iRan = IndexRange(iInd)
    jRan = IndexRange(jInd)
    ASub = Matrix(self.tag)
    args = [ASub.obj,self.obj,iRan,jRan]
    if self.Locked():
      if   self.tag == iTag: lib.ElLockedView_i(*args)
      elif self.tag == sTag: lib.ElLockedView_s(*args)
      elif self.tag == dTag: lib.ElLockedView_d(*args)
      elif self.tag == cTag: lib.ElLockedView_c(*args)
      elif self.tag == zTag: lib.ElLockedView_z(*args)
      else: DataExcept()
    else:
      if   self.tag == iTag: lib.ElView_i(*args)
      elif self.tag == sTag: lib.ElView_s(*args)
      elif self.tag == dTag: lib.ElView_d(*args)
      elif self.tag == cTag: lib.ElView_c(*args)
      elif self.tag == zTag: lib.ElView_z(*args)
      else: DataExcept()
    return ASub
